[gd_scene load_steps=10 format=3 uid="uid://cw1wg7hyc5jjy"]

[ext_resource type="Script" path="res://Scripits/Enemy/turret_lazor_shell.gd" id="1_7kcqx"]
[ext_resource type="Script" path="res://Scripits/health.gd" id="2_fe5nf"]
[ext_resource type="Script" path="res://Scripits/Enemy/turret_lazor_ai.gd" id="3_dy5qg"]
[ext_resource type="PackedScene" uid="uid://gfy5ro5buysv" path="res://Objects/Enemy Spawning/enemy_spawn_animation.tscn" id="3_y7ssn"]
[ext_resource type="Script" path="res://Scripits/Enemy/shape_cast_lazor.gd" id="4_uoo86"]

[sub_resource type="Animation" id="Animation_fnmto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Lazor:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Lazor/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_l75g0"]
resource_name = "fire lazor"
length = 3.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Lazor/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.5, 2, 2.3, 3, 3.3),
"transitions": PackedFloat32Array(1, 2.73208, 1, 0.353551, 3.03144, 1, 1),
"update": 0,
"values": [0.0, 3.0, 4.0, 1.0, 10.0, 0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Lazor/Line2D:default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 2.3, 3),
"transitions": PackedFloat32Array(0.183011, 1, 3.4822, 1),
"update": 0,
"values": [Color(0, 0.568627, 1, 1), Color(0, 0.239216, 1, 1), Color(0, 1, 1, 1), Color(0, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Lazor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [false],
"method": &"toggle_damaging"
}, {
"args": [true],
"method": &"toggle_damaging"
}, {
"args": [false],
"method": &"toggle_damaging"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Lazor")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Body")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"change_state"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"toggle_charging"
}, {
"args": [false],
"method": &"toggle_charging"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3a7dd"]
_data = {
"RESET": SubResource("Animation_fnmto"),
"fire lazor": SubResource("Animation_l75g0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8depo"]
size = Vector2(10, 20)

[node name="enemy_lazor_turret" type="Node2D"]
script = ExtResource("1_7kcqx")

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_fe5nf")

[node name="SlowTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnAnimation" parent="." instance=ExtResource("3_y7ssn")]
unique_name_in_owner = true

[node name="LazorAnimiationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_3a7dd")
}

[node name="Body" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 37
script = ExtResource("3_dy5qg")

[node name="ColliderShape" type="CollisionShape2D" parent="Body"]
unique_name_in_owner = true
disabled = true
debug_color = Color(0.968627, 0.101961, 0.380392, 0.419608)

[node name="Sprite" type="Sprite2D" parent="Body"]
unique_name_in_owner = true
texture_filter = 1

[node name="NavAgent" type="NavigationAgent2D" parent="Body"]
unique_name_in_owner = true

[node name="MovementTimer" type="Timer" parent="Body"]
wait_time = 0.1
autostart = true

[node name="ShootTimer" type="Timer" parent="Body"]
unique_name_in_owner = true

[node name="Lazor" type="ShapeCast2D" parent="Body"]
unique_name_in_owner = true
enabled = false
shape = SubResource("RectangleShape2D_8depo")
target_position = Vector2(0, -448)
max_results = 30
collision_mask = 5
script = ExtResource("4_uoo86")

[node name="Line2D" type="Line2D" parent="Body/Lazor"]
position = Vector2(-1.19209e-07, 0)
scale = Vector2(0.827869, 1)
points = PackedVector2Array(0, 0, 1.43995e-07, -168)
width = 0.0
default_color = Color(0, 1, 1, 1)

[connection signal="timeout" from="Body/MovementTimer" to="Body" method="_on_timer_timeout"]
[connection signal="timeout" from="Body/ShootTimer" to="Body" method="_on_shoot_timer_timeout"]
